# 20261R0136COSE47400

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: stage11c_alpha_switch_sanity10.json  stage12_panda_sanity10.json
docs/: limitations.md  method.md  reproduction.md
paper/: README.md  panda_note.tex  references.bib
paper/figures/: dynpac_pipeline_editable.tikz
results/dev/stage11c_alpha_switch_sanity10_v3/: pairwise_summary.csv  raw_predictions.csv  summary.csv
results/dev/stage12_panda_truthfulqa_sanity10/: pairwise_summary.csv  raw_predictions.csv  summary.csv
scripts/: plot_results.py  run_alpha_switch_baseline.py  run_truthfulqa.py
src/panda/: __init__.py  __main__.py  eval.py
