[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panda-decoding"
version = "0.1.0"
description = "PAnDa: Parallel-block Adaptive Contrast DoLa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.27",
  "torch>=2.2",
  "transformers>=4.39",
  "datasets>=2.18",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "sentencepiece>=0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
